--- a/client/src/app/site/pages/meetings/pages/projectors/modules/projector-detail/components/projector-detail/projector-detail.component.html
+++ b/client/src/app/site/pages/meetings/pages/projectors/modules/projector-detail/components/projector-detail/projector-detail.component.html
@@ -417,6 +417,42 @@
                         </mat-list>
                     </mat-expansion-panel>
 
+                    <!-- Current list of speakers -->
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <span>{{ 'Games' | translate }}</span>
+                        </mat-expansion-panel-header>
+
+                        <!-- Chess -->
+                        <mat-list>
+                            <mat-list-item>
+                                <button
+                                    mat-mini-fab
+                                    (click)="getGameBuildDesc('chess')"
+                                >
+                                    <mat-icon>videocam</mat-icon>
+                                </button>
+
+                                <span class="spacer-left-10">{{ 'Chess' | translate }}</span>
+                            </mat-list-item>
+                        </mat-list>
+
+                        <!-- C4 -->
+                        <mat-list>
+                            <mat-list-item>
+                                <button
+                                    mat-mini-fab
+                                    (click)="getGameBuildDesc('c4')"
+                                >
+                                    <mat-icon>videocam</mat-icon>
+                                </button>
+
+                                <span class="spacer-left-10">{{ 'C4' | translate }}</span>
+                            </mat-list-item>
+                        </mat-list>
+                    </mat-expansion-panel>
+
+
                     <!-- Current slide -->
                     <mat-expansion-panel *ngIf="hasSlide">
                         <mat-expansion-panel-header>
