--- a/client/src/app/ui/modules/sidenav/modules/easter-egg/modules/chess-dialog/components/chess-dialog/chess-dialog.component.html
+++ b/client/src/app/ui/modules/sidenav/modules/easter-egg/modules/chess-dialog/components/chess-dialog/chess-dialog.component.html
@@ -15,4 +15,7 @@
     <div *ngIf="!inMeeting">
         {{ 'Open a meeting to play chess' | translate }}
     </div>
+    <mat-checkbox [disabled]="isWatched" (change)="onAllowSpectatorsChange($event)">
+        {{ 'Allow spectators' | translate }}
+    </mat-checkbox>
 </div>
