--- a/client/src/app/site/pages/meetings/modules/projector/modules/slides/components/game-slide/components/game-slide.component.scss
+++ b/client/src/app/site/pages/meetings/modules/projector/modules/slides/components/game-slide/components/game-slide.component.scss
@@ -2,7 +2,7 @@
 @import 'cm-chessboard/assets/_chessboard-theme.scss';
 @import 'cm-chessboard/assets/chessboard.scss';
 
-.content {
+.game-slide-content {
     width: 80vh;
     overflow: hidden;
 }
