--- a/client/src/app/site/pages/meetings/modules/projector/modules/slides/components/game-slide/components/game-slide.component.html
+++ b/client/src/app/site/pages/meetings/modules/projector/modules/slides/components/game-slide/components/game-slide.component.html
@@ -7,7 +7,7 @@
         </h2>
     </div>
 
-    <div class="content">
+    <div class="game-slide-content">
         <div #board class="spacer-top-5"></div>
     </div>
 </div>
