--- a/client/src/app/ui/modules/sidenav/modules/easter-egg/modules/chess-dialog/components/chess-dialog/chess-dialog.component.html
+++ b/client/src/app/ui/modules/sidenav/modules/easter-egg/modules/chess-dialog/components/chess-dialog/chess-dialog.component.html
@@ -6,7 +6,9 @@
         </button>
     </div>
     <div *ngIf="opponentName" class="center spacer-top-5">{{ 'Playing against' | translate }} {{ opponentName }}</div>
-    <div #chessboard class="spacer-top-5"></div>
+    <div class="center spacer-top-5">
+        <div id="chessboard" #chessboard></div>
+    </div>
     <div *ngIf="inMeeting && state === 'start'" class="center spacer-top-5">
         <button (click)="handleEvent('searchClicked')" mat-raised-button color="accent">
             {{ 'Search player' | translate }}
@@ -15,7 +17,9 @@
     <div *ngIf="!inMeeting">
         {{ 'Open a meeting to play chess' | translate }}
     </div>
-    <mat-checkbox [disabled]="isWatched" (change)="onAllowSpectatorsChange($event)">
-        {{ 'Allow spectators' | translate }}
-    </mat-checkbox>
+    <div class="center">
+        <mat-checkbox [disabled]="isWatched" (change)="onAllowSpectatorsChange($event)">
+            {{ 'Allow spectators' | translate }}
+        </mat-checkbox>
+    </div>
 </div>
