--- a/client/src/app/ui/modules/sidenav/modules/easter-egg/modules/chess-dialog/components/chess-dialog/chess-dialog.component.scss
+++ b/client/src/app/ui/modules/sidenav/modules/easter-egg/modules/chess-dialog/components/chess-dialog/chess-dialog.component.scss
@@ -17,3 +17,9 @@
     max-height: 95vh;
     overflow: hidden;
 }
+
+#chessboard {
+    margin: 0 auto;
+    max-height: 70vh;
+    max-width: 70vh;
+}
